# coding: utf-8
[metadata]
name = siege-engine
keywords = ha, high availability, scalable, scalability, server, metrics, tracing
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = Basically a SYN flooder in Python
url = https://github.com/smok-serwis/siege-engine


[options]
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:

[options.packages.find]
exclude =
    docs
    tests


[bdist_wheel]
universal = 0
